--- a/06/index3.html
+++ b/06/index3.html
@@ -42,6 +42,6 @@
 </head>
 
 <body onload="run()">
-	<div id='r' style='float: left; width: 100%; height: 100%;'></div>
+	<div id='r' style='background-color: #000000; float: left; width: 100%; height: 100%;'></div>
 </body>
 </html>
