--- a/06/trk.html
+++ b/06/trk.html
@@ -12,7 +12,7 @@
       r.init();
       
       var tracks = new X.object();
-      tracks.load('../data/streamline.trk');
+      tracks.load('../data/tracks.trk');
       tracks.setOpacity(0.6);
       
       r.add(tracks);
@@ -25,6 +25,6 @@
 </head>
 
 <body onload="run()">
-  <div id='r' style='float: left; width: 100%; height: 100%;'></div>
+  <div id='r' style='background-color:#000000; float: left; width: 100%; height: 100%;'></div>
 </body>
 </html>
