--- a/06/trk.html
+++ b/06/trk.html
@@ -2,9 +2,14 @@
 <head>
 <title>XTK Load TRK File</title>
 
-<script type="text/javascript" src="../xtk.js"></script>
+
+<script type="text/javascript" src="../../X/lib/closure-library/closure/goog/base.js"></script>
+<script type="text/javascript" src="../../X/xtk-deps.js"></script>
 
 <script type="text/javascript">
+
+  goog.require('X.object');
+  goog.require('X.renderer');
   
   var run = function() {
       
