Lessons 01, 04 and the data!

--- a/00/index.html
+++ b/00/index.html
@@ -27,7 +27,7 @@
 
 <html>
 <head>
-<title>The SPL Knee Atlas</title>
+<title>XTK LESSON 00</title>
 
 <script type="text/javascript" src="../xtk.js"></script>
 
