The lessons are now complete for Release 1.

--- a/04/index.html
+++ b/04/index.html
@@ -22,6 +22,10 @@
  *      http://www.opensource.org/licenses/mit-license.php
  *
  * LESSON 04 - The magic Porsche!
+ *
+ *   The porsche.stl file is freely available here:
+ *     http://www.eng.nus.edu.sg/LCEL/RP/u21/wwwroot/stl_library.htm
+ *
  */
 -->
 
