Remove xtk.js from this repository and link to the main server.

--- a/04/index.html
+++ b/04/index.html
@@ -33,7 +33,7 @@
 <head>
 <title>XTK LESSON 04</title>
 
-<script type="text/javascript" src="../xtk.js"></script>
+<script type="text/javascript" src="http://goXTK.com/xtk.js"></script>
 
 <script type="text/javascript">
   var run = function() {
