--- a/02/index.html
+++ b/02/index.html
@@ -29,7 +29,7 @@
 <head>
 <title>XTK LESSON 02</title>
 
-<script type="text/javascript" src="../xtk.js"></script>
+<script type="text/javascript" src="http://goXTK.com/xtk.js"></script>
 
 <script type="text/javascript">
   var run = function() {
