Add a new lesson showing how to load vtk point data and show a sphere for each point.

--- a/08/index.html
+++ b/08/index.html
@@ -23,6 +23,8 @@
  *
  * LESSON 08 - Surf free..
  *
+ * Data kindly provided by Satrajit Gosh and Arno Klein (http://www.mindboggle.info)
+ * THANKS!!
  *
  */
 -->
