Small mixup in the thank you notes..

--- a/09/index.html
+++ b/09/index.html
@@ -23,6 +23,8 @@
  *
  * LESSON 09 - Points to Spheres
  *
+ * Data kindly provided by Satrajit Gosh and Arno Klein (http://www.mindboggle.info)
+ * THANKS!! 
  *
  */
 -->
