--- a/08/index.html
+++ b/08/index.html
@@ -104,6 +104,7 @@
     var trackgui = gui.addFolder('Fiber Tracks');
     var trackVisibleController = trackgui.add(tracks,'_visible');
     var trackOpacityController = trackgui.add(tracks, '_opacity', 0, 1);
+    trackgui.open();
     
     var lhgui = gui.addFolder('Left Hemisphere');
     var lhVisibleController = lhgui.add(lh,'_visible');
