--- a/02/index.html
+++ b/02/index.html
@@ -87,7 +87,7 @@
   };
 </script>
 
-<body onload="run()">
+<body onload="run()" style="margin:0px;">
   
   <!-- the container for the renderer -->
   <div id="r" style="background-color: #000000; width: 100%; height: 100%;"></div>
