--- a/07/index.html
+++ b/07/index.html
@@ -69,7 +69,7 @@
 	};
 </script>
 
-<body onload="run()">
+<body onload="run()" style="margin:0px;">
   
   <!-- three container for the renderers -->
   <div id='r1' style='background-color:#000000; float: left; width: 300px; height: 300px; margin:10px;'></div>
