Change the urls to xtk.js to the new get.goXTK.com server.

--- a/01/index.html
+++ b/01/index.html
@@ -29,7 +29,7 @@
 <head>
 <title>XTK LESSON 01</title>
 
-<script type="text/javascript" src="http://goXTK.com/xtk.js"></script>
+<script type="text/javascript" src="http://get.goXTK.com/xtk.js"></script>
 
 <script type="text/javascript">
   var run = function() {
