--- a/03/index.html
+++ b/03/index.html
@@ -29,7 +29,7 @@
 <head>
 <title>XTK LESSON 03</title>
 
-<script type="text/javascript" src="http://goXTK.com/xtk_nightly.js"></script>
+<script type="text/javascript" src="http://get.goXTK.com/xtk.js"></script>
 
 <script type="text/javascript">
   var run = function() {
