--- a/08/index.html
+++ b/08/index.html
@@ -31,7 +31,7 @@
 <title>XTK LESSON 08</title>
 
 
-<script type="text/javascript" src="http://goXTK.com/xtk_nightly.js"></script>
+<script type="text/javascript" src="http://get.goXTK.com/xtk.js"></script>
 <script type="text/javascript" src="dat.gui.min.js"></script>
 
 <script type="text/javascript">
