--- a/09/index.html
+++ b/09/index.html
@@ -33,7 +33,7 @@
 <head>
 <title>XTK LESSON 09</title>
 
-<script type="text/javascript" src="http://goXTK.com/xtk_nightly.js"></script>
+<script type="text/javascript" src="http://get.goXTK.com/xtk.js"></script>
 
 <script type="text/javascript">
   
