Disable changing the opacity for the tracks in lesson 08.

--- a/03/index.html
+++ b/03/index.html
@@ -36,7 +36,7 @@
     
     var r = new X.renderer('r');
     // the limit for objects with picking is right now 999
-    // but we are gonna create 1000 cubes - so let's deactivate picking
+    // but we are going to create 1000 cubes - so let's deactivate picking
     //
     // remember, XTK is optimized for large objects rather than a lot.. maybe you can help?
     r.config.PICKING_ENABLED = false;
