--- a/10/index.html
+++ b/10/index.html
@@ -86,6 +86,6 @@ goog.require('X.volume');
 <body onload="run()" style="margin:0px;">
   
   <!-- the container for the renderer -->
-  <div id="r" style="background-color: #000000; width: 100%; height: 100%;"></div>
+  <div id="r" style="background-color: #ffffff; width: 100%; height: 100%;"></div>
     
 </body>
