--- a/00/index.html
+++ b/00/index.html
@@ -29,7 +29,10 @@
 <head>
 <title>XTK LESSON 00</title>
 
-<script type="text/javascript" src="http://get.goXTK.com/xtk.js"></script>
+<!-- <script type="text/javascript" src="http://get.goXTK.com/xtk.js"></script> -->
+<script type="text/javascript" src="../xtk.js"></script>
+<!-- <script type="text/javascript" src="../../X/lib/closure-library/closure/goog/base.js"></script> -->
+<!-- <script type="text/javascript" src="../../X/xtk-deps.js"></script> -->
 
 <script type="text/javascript">
   var run = function() {
