--- a/08/index.html
+++ b/08/index.html
@@ -31,7 +31,10 @@
 <title>XTK LESSON 08</title>
 
 
-<script type="text/javascript" src="http://get.goXTK.com/xtk.js"></script>
+<!-- <script type="text/javascript" src="http://get.goXTK.com/xtk.js"></script> -->
+<script type="text/javascript" src="../xtk.js"></script>
+<!-- <script type="text/javascript" src="../../X/lib/closure-library/closure/goog/base.js"></script> -->
+<!-- <script type="text/javascript" src="../../X/xtk-deps.js"></script> -->
 <script type="text/javascript" src="dat.gui.min.js"></script>
 
 <script type="text/javascript">
