--- a/03/index.html
+++ b/03/index.html
@@ -29,10 +29,11 @@
 <head>
 <title>XTK LESSON 03</title>
 
-<script type="text/javascript" src="http://get.goXTK.com/xtk.js"></script>
+<script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script>
 
 <script type="text/javascript">
-  var run = function() {
+
+var run = function() {
     
     var r = new X.renderer('r');
     // the limit for objects with picking is right now 999
