--- a/07/index.html
+++ b/07/index.html
@@ -35,7 +35,7 @@
 <head>
 <title>XTK LESSON 07</title>
 
-<script type="text/javascript" src="http://get.goXTK.com/xtk.js"></script>
+<script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script>
 
 <script type="text/javascript">
 	var run = function() {
