--- a/09/index.html
+++ b/09/index.html
@@ -33,10 +33,10 @@
 <head>
 <title>XTK LESSON 09</title>
 
-<script type="text/javascript" src="http://get.goXTK.com/xtk.js"></script>
+<script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script>
 
 <script type="text/javascript">
-  
+
   var run = function() {
     
     // create a new renderer
