--- a/08/index.html
+++ b/08/index.html
@@ -33,7 +33,7 @@
 <title>XTK LESSON 08</title>
 
 
-<script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script>
+<script type="text/javascript" src="http://get.goXTK.com/xtk.js"></script>
 <script type="text/javascript" src="http://get.goXTK.com/xtk_xdat.gui.js"></script>
 
 <script type="text/javascript">
