--- a/00/index.html
+++ b/00/index.html
@@ -29,15 +29,15 @@
 <head>
 <title>XTK LESSON 00</title>
 
-<script type="text/javascript" src="../xtk.js"></script>
-<!-- <script type="text/javascript" src="../../X/lib/closure-library/closure/goog/base.js"></script> -->
-<!-- <script type="text/javascript" src="../../X/xtk-deps.js"></script> -->
+<!-- <script type="text/javascript" src="../xtk.js"></script> -->
+<script type="text/javascript" src="../../X/lib/closure-library/closure/goog/base.js"></script>
+<script type="text/javascript" src="../../X/xtk-deps.js"></script>
 
 <!-- <script type="text/javascript" src="../xtk.js"></script> -->
 
 <script type="text/javascript">
-// goog.require('X.renderer3D');
-// goog.require('X.cube');
+goog.require('X.renderer3D');
+goog.require('X.cube');
 // goog.require('X.cylinder');
 // goog.require('X.sphere');
 
