--- a/06/index.html
+++ b/06/index.html
@@ -33,19 +33,28 @@
 <head>
 <title>XTK LESSON 06</title>
 
-<script type="text/javascript" src="http://get.goXTK.com/xtk.js"></script>
+<!-- <script type="text/javascript" src="http://get.goXTK.com/xtk.js"></script> -->
+<script type="text/javascript" src="../../X/lib/closure-library/closure/goog/base.js"></script>
+<script type="text/javascript" src="../../X/xtk-deps.js"></script>
 
 <script type="text/javascript">
+
+
+goog.require('X.renderer3D');
+goog.require('X.object');
+
+
   var run = function() {
     
     // create a new renderer
-    var r = new X.renderer('r');
+    var r = new X.renderer3D();
+    r.container = 'r';
     r.init();
 
     // load a .vtk file
     var fibers = new X.object();
-    fibers.load('../data/cc_tracks.trk');
-    fibers.setCaption('The Corpus Callosum:<br>connecting the two hemispheres<br>of the human brain.')
+    fibers.file = '../data/cc_tracks.trk';
+    fibers.caption = 'The Corpus Callosum:<br>connecting the two hemispheres<br>of the human brain.';
 
     // add the object
     r.add(fibers);
