--- a/01/index.html
+++ b/01/index.html
@@ -29,13 +29,13 @@
 <head>
 <title>XTK LESSON 01</title>
 
-<!-- <script type="text/javascript" src="../xtk.js"></script> -->
-<script type="text/javascript" src="../../X/lib/closure-library/closure/goog/base.js"></script>
-<script type="text/javascript" src="../../X/xtk-deps.js"></script>
+<script type="text/javascript" src="../xtk.js"></script>
+<!-- <script type="text/javascript" src="../../X/lib/closure-library/closure/goog/base.js"></script> -->
+<!-- <script type="text/javascript" src="../../X/xtk-deps.js"></script> -->
 
 <script type="text/javascript">
-goog.require('X.renderer3D');
-goog.require('X.cube');
+// goog.require('X.renderer3D');
+// goog.require('X.cube');
 
   var run = function() {
     
