--- a/09/index.html
+++ b/09/index.html
@@ -28,10 +28,7 @@
 <html>
 <head>
 <title>XTK LESSON 09</title>
-<!-- <script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script> -->
-<script type="text/javascript" src="../../X/lib/closure-library/closure/goog/base.js"></script>
-<script type="text/javascript" src="../../X/xtk-deps.js"></script>
-
+<script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script>
 <script type="text/javascript" src="demo.js"></script>
 <link rel="stylesheet" type="text/css" href="demo.css">
 </head>
