--- a/13/index.html
+++ b/13/index.html
@@ -39,11 +39,11 @@
 <div id="3d"
   style="background-color: #000; width: 100%; height: 70%; margin-bottom: 2px;"></div>
 <div id="sliceX"
-  style="border-style: solid; border-top: 2px solid yellow; background-color: #000; width: 32%; height: 30%; float: left;"></div>
+  style="border-top: 2px solid yellow; background-color: #000; width: 32%; height: 30%; float: left;"></div>
 <div id="sliceY"
-  style="border-style: solid; border-top: 2px solid red;background-color: #000; width: 32%; height: 30%; float: left;"></div>
+  style="border-top: 2px solid red;background-color: #000; width: 32%; height: 30%; float: left;"></div>
 <div id="sliceZ"
-  style="border-style: solid; border-top: 2px solid green; background-color: #000; width: 32%; height: 30%; float: left;"></div>
+  style="border-top: 2px solid green; background-color: #000; width: 32%; height: 30%; float: left;"></div>
 
 <div id='jsfiddle' style='position:absolute;top:10px;left:10px;'><a href='http://jsfiddle.net/gh/get/library/pure/xtk/lessons/tree/master/13/#run' target=_blank><img src='http://xtk.github.com/fiddlelogo.png' border=0></a></div>
 </body>
