Better css for the borders of lesson 13.

--- a/13/demo.html
+++ b/13/demo.html
@@ -1,9 +1,9 @@
 <!-- the container for the renderers -->
 <div id="3d"
-  style="background-color: #000; width: 100%; height: 69%; margin-bottom: 2px;"></div>
+  style="background-color: #000; width: 100%; height: 70%; margin-bottom: 2px;"></div>
 <div id="sliceX"
-  style="border-style: solid; border-color: yellow; background-color: #000; width: 32%; height: 30%; float: left;"></div>
+  style="border-top: 2px solid yellow; background-color: #000; width: 32%; height: 30%; float: left;"></div>
 <div id="sliceY"
-  style="border-style: solid; border-color: red; background-color: #000; width: 32%; height: 30%; float: left;"></div>
+  style="border-top: 2px solid red;background-color: #000; width: 32%; height: 30%; float: left;"></div>
 <div id="sliceZ"
-  style="border-style: solid; border-color: green; background-color: #000; width: 32%; height: 30%; float: left;"></div>
+  style="border-top: 2px solid green; background-color: #000; width: 32%; height: 30%; float: left;"></div>
