--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-THE LESSONS
+<html>
+  <head>
+    <title>lessons.goXTK.com</title>
+    <meta http-equiv="refresh" content="0;URL=https://github.com/xtk/lessons">
+  </head>
+
+  <body>
+  redirecting to.. https://github.com/xtk/lessons
+  </body>
+</html>
+
