--- a/16/index.html
+++ b/16/index.html
@@ -28,12 +28,14 @@
 <html>
 <head>
 <title>XTK LESSON 15</title>
-<script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script>
+<!-- <script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script> -->
+<script type="text/javascript" src="xtk.js"></script>
 <script type="text/javascript" src="demo.js"></script>
 <link rel="stylesheet" type="text/css" href="demo.css">
 </head>
 
 <body>
 <div id='jsfiddle' style='position:absolute;bottom:10px;left:10px;'><a href='http://jsfiddle.net/gh/get/library/pure/xtk/lessons/tree/gh-pages/15/#run' target=_blank><img src='http://xtk.github.com/fiddlelogo.png' border=0></a></div>
+<div id='label' style='position:absolute;bottom:10px;right:10px;'>24 weeks</div>
 </body>
 </html>
