--- a/17/index.html
+++ b/17/index.html
@@ -28,24 +28,42 @@
 <html>
 <head>
 <title>XTK LESSON 13</title>
-  <script type="text/javascript" src="../../X/lib/google-closure-library/closure/goog/base.js"></script>
-  <script type="text/javascript" src="../../X/xtk-deps.js"></script>
-<script type="text/javascript" src="http://get.goXTK.com/xtk_xdat.gui.js"></script>
+<script type="text/javascript"
+	src="../../X/lib/google-closure-library/closure/goog/base.js"></script>
+<script type="text/javascript" src="../../X/xtk-deps.js"></script>
+<script type="text/javascript"
+	src="http://get.goXTK.com/xtk_xdat.gui.js"></script>
 <script type="text/javascript" src="demo.js"></script>
 <link rel="stylesheet" type="text/css" href="demo.css">
 </head>
 
 <body>
-<!-- the container for the renderers -->
-<div id="3d"
-  style="background-color: #000; width: 100%; height: 70%; margin-bottom: 2px;"></div>
-<div id="sliceX"
-  style="border-top: 2px solid yellow; background-color: #000; width: 32%; height: 30%; float: left;"></div>
-<div id="sliceY"
-  style="border-top: 2px solid red;background-color: #000; width: 32%; height: 30%; float: left;"></div>
-<div id="sliceZ"
-  style="border-top: 2px solid green; background-color: #000; width: 32%; height: 30%; float: left;"></div>
+	<!-- the container for the renderers -->
+	<div id="3d"
+		style="background-color: #000; width: 100%; height: 70%; margin-bottom: 2px;"></div>
+	<div id="sliceX"
+		style="border-top: 2px solid yellow; background-color: #000; width: 32%; height: 30%; float: left;">
+		<div id='infoX'
+			style='position: relative; top: 10px; left: 10px; color: white;'>none</div>
 
-<div id='jsfiddle' style='position:absolute;top:10px;left:10px;'><a href='http://jsfiddle.net/gh/get/toolkit/edge/xtk/lessons/tree/master/13/#run' target=_blank><img src='http://xtk.github.com/fiddlelogo.png' border=0></a></div>
+	</div>
+	<div id="sliceY"
+		style="border-top: 2px solid red; background-color: #000; width: 32%; height: 30%; float: left;">
+		<div id='infoY'
+			style='position: relative; top: 10px; left: 10px; color: white;'>none</div>
+
+	</div>
+	<div id="sliceZ"
+		style="border-top: 2px solid green; background-color: #000; width: 32%; height: 30%; float: left;">
+		<div id='infoZ'
+			style='position: relative; top: 10px; left: 10px; color: white;'>none</div>
+	</div>
+
+	<div id='jsfiddle' style='position: absolute; top: 10px; left: 10px;'>
+		<a
+			href='http://jsfiddle.net/gh/get/toolkit/edge/xtk/lessons/tree/master/13/#run'
+			target=_blank><img src='http://xtk.github.com/fiddlelogo.png'
+			border=0></a>
+	</div>
 </body>
 </html>
