WIP on lesson 17

--- a/17/triple.html
+++ b/17/triple.html
@@ -17,7 +17,7 @@
     ren2dX.init();
 
     volume = new X.volume();
-    volume.file = 'avf.nii';
+    volume.file = 'vol.nii';
 
     ren2dX.add(volume);
 
