add google analytics and some information
getting ready for the chrome experiments submission

--- a/17/index.html
+++ b/17/index.html
@@ -35,8 +35,36 @@
 </head>
 
 <body>
-<h1 class="onair" style='position:absolute;top:10px;left:10px;'>[ <div class='circle'></div> REAL-TIME LIVE ]</h1>
+<div style='position:absolute;top:10px;left:10px;'>
+<h1 class="onair">[ <div class='circle'></div> REAL-TIME LIVE ]</h1>
+
+<details>
+  <summary>About</summary>
+  <div class='content'><b>
+#</b>MRI dataset (220x220x176)</br>
+<b>#</b>Random directions slices</br>
+<b>#</b>Real-time!
+  </div>
+</details>
+<details>
+  <summary>Credits</summary>
+  <div class='content'>Nicolas, Daniel, dev@goxtk.com, FNNDSC
+  </div>
+</details>
+
+</div>
 
 <div id='jsfiddle' style='position:absolute;bottom:10px;left:10px;'><a href='http://jsfiddle.net/gh/get/toolkit/edge/xtk/lessons/tree/master/17/#run' target=_blank><img src='http://xtk.github.com/fiddlelogo.png' border=0></a></div>
 </body>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-43414750-1', 'goxtk.com');
+  ga('send', 'pageview');
+
+</script>
 </html>
