update google analytics

--- a/17/index.html
+++ b/17/index.html
@@ -40,12 +40,13 @@
 
 <details>
   <summary>About</summary>
-  <div class='content'><b>
-#</b>MRI dataset (220x220x176)</br>
-<b>#</b>Random directions slices</br>
-<b>#</b>Real-time!
+  <div class='content'>
+  <  b>#</b>MRI dataset (220x220x176)</br>
+    <b>#</b>Random directions slices</br>
+    <b>#</b>Real-time!
   </div>
 </details>
+
 <details>
   <summary>Credits</summary>
   <div class='content'>Nicolas, Daniel, dev@goxtk.com, FNNDSC
@@ -63,7 +64,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-43414750-1', 'goxtk.com');
+  ga('create', 'UA-43414750-1', 'lessons.goxtk.com/17');
   ga('send', 'pageview');
 
 </script>
