--- a/17/index.html
+++ b/17/index.html
@@ -28,10 +28,33 @@
 <html>
 <head>
 <title>XTK LESSON 17</title>
-<script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script>
+<script type="text/javascript" src="../../X/lib/google-closure-library/closure/goog/base.js"></script>
+<script type="text/javascript" src="../../X/xtk-deps.js"></script>
 <script type="text/javascript" src="http://get.goXTK.com/xtk_xdat.gui.js"></script>
 <script type="text/javascript" src="demo.js"></script>
 <link rel="stylesheet" type="text/css" href="demo.css">
+
+<!-- Google Analytics -->
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-43414750-1']);
+  _gaq.push(['_trackPageview']);
+  
+  (function() {
+
+    var ga = document.createElement('script');
+    ga.type = 'text/javascript';
+    ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl'
+        : 'http://www') +
+        '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(ga, s);
+  })();
+</script>
+<!-- Google Analytics -->
+
+
 </head>
 
 <body>
@@ -41,8 +64,8 @@
 <details>
   <summary>About</summary>
   <div class='content'>
-    <b>#</b>MRI dataset (220x220x176)</br>
-    <b>#</b>Random directions slices</br>
+    <b>#</b>Brain MRI (220x220x176)</br>
+    <b>#</b>Random reslicing</br>
     <b>#</b>Real-time!
   </div>
 </details>
@@ -57,15 +80,4 @@
 
 <div id='jsfiddle' style='position:absolute;bottom:10px;left:10px;'><a href='http://jsfiddle.net/gh/get/toolkit/edge/xtk/lessons/tree/master/17/#run' target=_blank><img src='http://xtk.github.com/fiddlelogo.png' border=0></a></div>
 </body>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-43414750-1', 'lessons.goxtk.com/17');
-  ga('send', 'pageview');
-
-</script>
 </html>
