demo was not linked against XTK edge

--- a/17/index.html
+++ b/17/index.html
@@ -21,15 +21,14 @@
  *    The X Toolkit (XTK) is licensed under the MIT License:
  *      http://www.opensource.org/licenses/mit-license.php
  *
- * LESSON 10 - Slice it!
+ * LESSON 17 - (RE)Slice it!
  */
 -->
 
 <html>
 <head>
 <title>XTK LESSON 17</title>
-<script type="text/javascript" src="../../X/lib/google-closure-library/closure/goog/base.js"></script>
-<script type="text/javascript" src="../../X/xtk-deps.js"></script>
+<script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script>
 <script type="text/javascript" src="http://get.goXTK.com/xtk_xdat.gui.js"></script>
 <script type="text/javascript" src="demo.js"></script>
 <link rel="stylesheet" type="text/css" href="demo.css">
