--- a/17/index.html
+++ b/17/index.html
@@ -34,6 +34,18 @@
 <link rel="stylesheet" type="text/css" href="demo.css">
 
 <!-- Google Analytics -->
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-43414750-1', 'goxtk.com');
+  ga('send', 'pageview');
+
+</script>
+<!--
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-43414750-1']);
@@ -50,7 +62,7 @@
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(ga, s);
   })();
-</script>
+</script>--!>
 <!-- Google Analytics -->
 
 
