--- a/17/index.html
+++ b/17/index.html
@@ -77,7 +77,7 @@
 
 <details>
   <summary>Credits</summary>
-  <div class='content'>Nicolas, Daniel, dev@goxtk.com, FNNDSC
+  <div class='content'>Nicolas Rannou<br/>Daniel Haehn</br>Rudolph Pienaar</br>Ellen Grant</br><a href="http://childrenshospital.org/cfapps/research/data_admin/Site3068/mainpageS3068P0.html">FNNDSC</a></br><a href="http://www.childrenshospital.org/">Boston Children's Hospital</a>
   </div>
 </details>
 
