improve demo loading

--- a/17/index.html
+++ b/17/index.html
@@ -61,7 +61,7 @@
 </head>
 
 <body>
-<div class='loading'> <h1 class='onair'>Lesson 17:<br/>(RE)Slice it!</h1> </div>
+<div id='loading'> <h1 class='onair'>Loading brain MRI...</h1> </div>
 
 <div style='position:absolute;top:10px;left:10px;'>
 <h1 class="onair">[ <div class='circle'></div> REAL-TIME LIVE ]</h1>
