--- a/17/index.html
+++ b/17/index.html
@@ -70,14 +70,13 @@
   <summary>About</summary>
   <div class='content'>
     <b>#</b>Brain MRI (220x220x176)</br>
-    <b>#</b>Random reslicing</br>
-    <b>#</b>Real-time!
+    <b>#</b>Real-time slicing!
   </div>
 </details>
 
 <details>
   <summary>Credits</summary>
-  <div class='content'>Nicolas Rannou<br/>Daniel Haehn</br>Rudolph Pienaar</br>Ellen Grant</br><a href="http://childrenshospital.org/cfapps/research/data_admin/Site3068/mainpageS3068P0.html">FNNDSC</a></br><a href="http://www.childrenshospital.org/">Boston Children's Hospital</a>
+  <div class='content'>Nicolas Rannou<br/>Daniel Haehn</br>Rudolph Pienaar</br>Ellen Grant</br><a href="http://childrenshospital.org/cfapps/research/data_admin/Site3068/mainpageS3068P0.html" target="_blank">FNNDSC</a></br><a href="http://www.childrenshospital.org/" target="_blank">Boston Children's Hospital</a>
   </div>
 </details>
 
