--- a/17/index.html
+++ b/17/index.html
@@ -64,13 +64,13 @@
 <div id='loading'> <h1 class='onair'>Loading brain MRI...</h1> </div>
 
 <div style='position:absolute;top:10px;left:10px;'>
-<h1 class="onair">[ <div class='circle'></div> REAL-TIME LIVE ]</h1>
+<h1 class="onair">[ <div class='circle'></div> LIVE RE-SLICING ]</h1>
 
 <details>
   <summary>About</summary>
   <div class='content'>
     <b>#</b>Brain MRI (220x220x176)</br>
-    <b>#</b>Real-time slicing!
+    <b>#</b>Live re-slicing!
   </div>
 </details>
 
