--- a/17/index.html
+++ b/17/index.html
@@ -87,8 +87,9 @@
 
     Technology
     <p>
-    <b>HTML5</b><br>
+    <b>Javascript</b><br>
     <b>WebGL</b><br>
+    <b>HTML5</b><br>
     <b>CSS3</b>
     </p>
 
