ready for the chrome experiement submission

--- a/17/index.html
+++ b/17/index.html
@@ -73,10 +73,9 @@
 <details open onclick="closeContent(indexContent(this));">
   <summary>About</summary>
   <div class='content'>
-	  <br>
     Overview
     <p>
-		In this demo, a typical <a href="http://en.wikipedia.org/wiki/Magnetic_resonance_imaging#T1-weighted_MRI" target="_blank">T1-weighted</a> brain MRI is loaded in the main browser window. Once loaded, the volume is arbitrarily resliced along randomly generated planes.
+		In this demo, a typical <a href="http://en.wikipedia.org/wiki/Magnetic_resonance_imaging#T1-weighted_MRI" target="_blank">T1-weighted</a> brain MRI is loaded in the main browser window. Once rendered, the volume is arbitrarily resliced along randomly generated planes.
 	</p>
 	<p>
 		The original data was collected along a single scan direction, in this case the <a href="http://en.wikipedia.org/wiki/Sagittal_plane" target="_blank">sagittal</a> direction (which means slices parallel to a line dividing the head into left and right halves). All these slices together can be stacked like plates into a volume. Most medical viewing software would show MRI data along the acquired direction, and then also interpolated along two other orthogonal directions: <a href="http://en.wikipedia.org/wiki/Axial_plane" target="_blank">axial</a> (top to bottom) and <a href="http://en.wikipedia.org/wiki/Coronal_plane" target="_blank">coronal</a> (front to back). 
