add leap motion support in 2 new modes

--- a/17/demo.html
+++ b/17/demo.html
@@ -50,6 +50,8 @@
     <b>Demo:</b> Reslice data randomly<br>
     <b>Cam:</b> As the box is rotated, show the mid-volumetric slice normal to the camera<br>
     <b>Box:</b> Keep slice fixed, but rotate the bounding box<br>
+    <b>Palm (<span class='warning'>Leap Motion</span>):</b> look at the data in the palm normal direction<br>
+    <b>Point (<span class='warning'>Leap Motion</span>):</b> explore data with your fingers<br>  -> 2 fingers to rotate the box<br>  -> 4 fingers to scroll through slices<br>
     <span class='subp'>Show BBox:</span>Show/Hide the data bounding box<br>
     <span class='subp'>Slice Coloring:</span>Turn on/off slice coloring based on slice normal direction. When off, show only shades of gray.<br>
     </p>
