--- a/17/index.html
+++ b/17/index.html
@@ -28,9 +28,9 @@
 <html>
 <head>
 <title>XTK LESSON 17</title>
-
 <script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script>
 <script type="text/javascript" src="http://get.goXTK.com/xtk_xdat.gui.js"></script>
+<script src="https://rawgithub.com/leapmotion/leapjs/master/leap.min.js"></script>
 
 <!-- shim to support details summary in firefox and IE-->
 <!-- http://tyleruebele.com/weblog/details-shim -->
@@ -120,6 +120,8 @@
     <b>Demo:</b> Reslice data randomly<br>
     <b>Cam:</b> As the box is rotated, show the mid-volumetric slice normal to the camera<br>
     <b>Box:</b> Keep slice fixed, but rotate the bounding box<br>
+    <b>Palm (<span class='warning'>Leap Motion</span>):</b> look at the data in the palm normal direction<br>
+    <b>Point (<span class='warning'>Leap Motion</span>):</b> explore data with your fingers<br>  -> 2 fingers to rotate the box<br>  -> 4 fingers to scroll through slices<br>
     <span class='subp'>Show BBox:</span>Show/Hide the data bounding box<br>
     <span class='subp'>Slice Coloring:</span>Turn on/off slice coloring based on slice normal direction. When off, show only shades of gray.<br>
     </p>
