--- a/17/index.html
+++ b/17/index.html
@@ -30,7 +30,7 @@
 <title>XTK LESSON 17</title>
 <script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script>
 <script type="text/javascript" src="http://get.goXTK.com/xtk_xdat.gui.js"></script>
-<script src="https://rawgithub.com/leapmotion/leapjs/master/leap-0.4.3.min.js"></script>
+<script src="https://cdn.rawgit.com/leapmotion/leapjs/v0.4.3/leap.min.js"></script>
 
 <!-- shim to support details summary in firefox and IE-->
 <!-- http://tyleruebele.com/weblog/details-shim -->
