--- a/13a/index.html
+++ b/13a/index.html
@@ -45,6 +45,6 @@
 <div id="sliceZ"
   style="border-top: 2px solid green; background-color: #000; width: 32%; height: 30%; float: left;"></div>
 
-<div id='jsfiddle' style='position:absolute;top:10px;left:10px;'><a href='http://jsfiddle.net/gh/get/xtk/edge/xtk/lessons/tree/master/13/#run' target=_blank><img src='http://xtk.github.com/fiddlelogo.png' border=0></a></div>
+<div id='jsfiddle' style='position:absolute;top:10px;left:10px;'><a href='http://jsfiddle.net/gh/get/xtk/edge/xtk/lessons/tree/master/13/#run' target=_blank><img src='http://xtk.github.io/fiddlelogo.png' border=0></a></div>
 </body>
 </html>
