--- a/18/index.html
+++ b/18/index.html
@@ -62,7 +62,7 @@
 	<div id='jsfiddle' style='position: absolute; top: 10px; left: 10px;'>
 		<a
 			href='http://jsfiddle.net/gh/get/xtk/edge/xtk/lessons/tree/master/13/#run'
-			target=_blank><img src='http://xtk.github.com/fiddlelogo.png'
+			target=_blank><img src='http://xtk.github.io/fiddlelogo.png'
 			border=0></a>
 	</div>
 </body>
