Update all lessons to https.

--- a/02/index.html
+++ b/02/index.html
@@ -28,7 +28,7 @@
 <html>
 <head>
 <title>XTK LESSON 02</title>
-<script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script>
+<script type="text/javascript" src="https://get.goXTK.com/xtk_edge.js"></script>
 <script type="text/javascript" src="demo.js"></script>
 <link rel="stylesheet" type="text/css" href="demo.css">
 </head>
