--- a/17/index.html
+++ b/17/index.html
@@ -28,8 +28,8 @@
 <html>
 <head>
 <title>XTK LESSON 17</title>
-<script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script>
-<script type="text/javascript" src="http://get.goXTK.com/xtk_xdat.gui.js"></script>
+<script type="text/javascript" src="https://get.goXTK.com/xtk_edge.js"></script>
+<script type="text/javascript" src="https://get.goXTK.com/xtk_xdat.gui.js"></script>
 <script src="https://cdn.rawgit.com/leapmotion/leapjs/v0.4.3/leap.min.js"></script>
 
 <!-- shim to support details summary in firefox and IE-->
