--- a/13/index.html
+++ b/13/index.html
@@ -28,8 +28,8 @@
 <html>
 <head>
 <title>XTK LESSON 13</title>
-<script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script>
-<script type="text/javascript" src="http://get.goXTK.com/xtk_xdat.gui.js"></script>
+<script type="text/javascript" src="https://get.goXTK.com/xtk_edge.js"></script>
+<script type="text/javascript" src="https://get.goXTK.com/xtk_xdat.gui.js"></script>
 <script type="text/javascript" src="demo.js"></script>
 <link rel="stylesheet" type="text/css" href="demo.css">
 </head>
