--- a/16/index.html
+++ b/16/index.html
@@ -30,8 +30,8 @@
 <html>
 <head>
 <title>10 PRINT 3D</title>
-<script type="text/javascript" src="http://get.goXTK.com/xtk_edge.js"></script>
-<script type="text/javascript" src="http://get.goXTK.com/xtk_xdat.gui.js"></script>
+<script type="text/javascript" src="https://get.goXTK.com/xtk_edge.js"></script>
+<script type="text/javascript" src="https://get.goXTK.com/xtk_xdat.gui.js"></script>
 <script type="text/javascript" src="demo.js"></script>
 <link rel="stylesheet" type="text/css" href="demo.css">
 </head>
