--- a/17/index.html
+++ b/17/index.html
@@ -163,6 +163,6 @@
 
 </div>
 
-<div id='jsfiddle' style='position:absolute;bottom:10px;left:10px;'><a href='http://jsfiddle.net/gh/get/xtk/edge/xtk/lessons/tree/master/17/#run' target=_blank><img src='http://xtk.github.io/fiddlelogo.png' border=0></a></div>
+<div id='jsfiddle' style='position:absolute;bottom:10px;left:10px;'><a href='http://jsfiddle.net/gh/get/xtk/edge/xtk/lessons/tree/master/17/#run' target=_blank><img src='https://xtk.github.io/fiddlelogo.png' border=0></a></div>
 </body>
 </html>
